--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -217,7 +217,7 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="116dp"
+        android:layout_width="64dp"
         android:layout_height="13dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -231,15 +231,15 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
+        app:layout_constraintHorizontal_bias="0.394"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.087" />
+        app:layout_constraintVertical_bias="0.085" />
 
     <TextView
         android:id="@+id/input3"
-        android:layout_width="128dp"
-        android:layout_height="14dp"
+        android:layout_width="85dp"
+        android:layout_height="13dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -252,10 +252,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.424"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.114" />
+        app:layout_constraintVertical_bias="0.12" />
 
     <TextView
         android:id="@+id/textView"
@@ -273,8 +273,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="131dp"
-        android:layout_height="13dp"
+        android:layout_width="60dp"
+        android:layout_height="14dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -294,7 +294,7 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="158dp"
+        android:layout_width="65dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -308,10 +308,10 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.628"
+        app:layout_constraintHorizontal_bias="0.204"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintVertical_bias="0.083" />
 
     <Button
         android:id="@+id/btnVibration_On"
@@ -387,8 +387,8 @@
 
     <TextView
         android:id="@+id/input1"
-        android:layout_width="132dp"
-        android:layout_height="13dp"
+        android:layout_width="56dp"
+        android:layout_height="10dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -408,8 +408,8 @@
 
     <TextView
         android:id="@+id/input2"
-        android:layout_width="151dp"
-        android:layout_height="13dp"
+        android:layout_width="60dp"
+        android:layout_height="11dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -422,10 +422,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.608"
+        app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.114" />
+        app:layout_constraintVertical_bias="0.119" />
 
     <Button
         android:id="@+id/calibtrateBtn"
@@ -707,6 +707,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.369" />
+
+    <Button
+        android:id="@+id/motorTestBtn"
+        android:layout_width="153dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Test Motors"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.091" />
 
 
 </android.support.constraint.ConstraintLayout>
